deploy/kubernetes/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-country-api-app
  labels:
    app: demo-country-api-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-country-api-app
  template:
    metadata:
      labels:
        app: demo-country-api-app
    spec:
      containers:
      - name: demo-country-api
        image: jcastellanos/demo-country-api-python:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health/liveness
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health/readiness
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
