deploy/kubernetes/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-country-api-service
spec:
  selector:
    app: demo-country-api-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
